# magiclib

./: .clang-format  .gitignore  CMakeLists.txt  build.sh  readme.md
benchmarks/: benchmark.hpp  threadpool.cpp
cmake/: clang-format.cmake
cmake/Modules/: FindMKL.cmake  FindTBB.cmake
include/: ThreadPool.hpp
include/automata/: DFA.hpp  TransitionFunction.hpp
include/core/: Device.hpp  DeviceCPU.hpp
include/memory/: Storage.hpp  StorageView.hpp  Utils.hpp  View.hpp
src/: Dummy.cpp
src/automata/: DFA.cpp
src/optimisation/discrete/: GeneticAlgorithm.hpp  OptimisationSolution.hpp  SimulatedAnnealing.hpp
src/python/: ModuleBindings.cpp  RuleExtractorPython.hpp
src/ruleextraction/: RuleExtractor.cpp  RuleExtractor.hpp  RuleSolution.cpp  RuleSolution.hpp
test/: automata.cpp  gtest.cpp  memory.cpp  threadpool.cpp
test/optimisation/: discrete.cpp
